- **Bonus por Benção**: Inteligência/Ponto `8` -> `7`. Vida / Ponto: `30` -> `20` 
- Tempo para resposta na Dungeon `8s` -> `12s`
- Ao encontrar um inimigo na Dungeon, ele que desfere o Primeiro Ataque!
- O tempo Morto se baseia no tempo rezando até se curar 100%
- O cálculo de nível dos mobs foi atualizado. `nivelDaDungeon * 5 + nivelDoUsuario`
- Ao passar de nível, seu XP total é zerado.

### Fixed

- Racas que dão bônus de vida e mana começam com sua vida e mana no máximo
- A Igreja poderia te dar Vida e Mana acima de seu máximo

## [4.0.0-BETA] - 04-02-2022

### Added

- O Mundo de Boleham está de Volta!
- O RPG está em sua versão Beta. Nesta versão, todos usuários que se registrarem no RPG ganharão uma Badge no Perfil, e aqueles que derem um feedback ou report de bug receberão uma habilidade única no final do BETA em sua conta principal.
- **NOVOS COMANDOS:**
  -  `/ficha` - Registre-se no mundo de Boleham, ou veja a ficha de outro usuário. No registro, você pode escolher entre 10 classes e 6 racas diferentes, cada uma com um bônus diferente.
  -  `/igreja` - Reze ao Dragão Ancião Elemental da Luz para receber vitalidade. Lá é onde pessoas ficam descansando para receber seus poderes de volta. Você pode ficar o tempo que quiser, e quanto mais tempo você fica, mais você regenera. Ao parar, você deve esperar 30 minutos para poder rezar novamente. Ao morrer em uma aventura, é para lá que você vai.
  -  `/centro mercado comprar` - Compre poções para se rejuvenescer mais rápido!
  -  `/centro mercado vender` - Venda ítens encontrados na Dungeon, receba Moedas Reais em troca.
  -  `/centro guilda` - (EM BREVE) Escolha uma Quest para fazer e reivindique-as
  -  `/centro ferreiro` - Melhore suas ferramentas, como a Mochila, sua Armadura e sua Arma.
  -  `/inventario` - Mostra seu inventário ou o de outra pessoa